[project]
name = "comfyui-craftgear-nodes"
description = "some tiny nodes for better QoL "
version = "0.4.4"
license = { file = "LICENSE" }
dependencies = []

[project.urls]
Repository = "https://github.com/YOUR_USERNAME/comfyui-craftgear-nodes"

[tool.comfy]
PublisherId = "craftgear"
DisplayName = "Craftgear Nodes"
Icon = ""
