[project]
name = "comfyui-craftgear-nodes"
description = "some tiny nodes for better QoL "
version = "0.6.1"
license = { file = "LICENSE" }
dependencies = []

[project.urls]
Repository = "https://github.com/craftgear/comfyui-craftgear-nodes"

[tool.comfy]
PublisherId = "craftgear"
DisplayName = "Craftgear Nodes"
Icon = ""
